fix sonar stream issue