@@ -16,7 +16,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Sort;
@@ -323,7 +322,7 @@ public class ApplicationService {
   private List<String> resolveCompanyIds(String search) {
     return this.companyRepository.findByCompanyNameContainingIgnoreCase(search.trim()).stream()
         .map(CompanyModel::getId)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
